Fixed z-index issue and footer spacing for portfolio page

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -136,5 +136,5 @@
 
 footer {
 	// background-image: url('../../images/volunteering.jpg');
-	background-attachment: fixed;
+	// background-attachment: fixed;
 }
